src/components/DatePicker/MobileCalendar.scss
@use '../variables';

$block: '.#{variables.$ns}mobile-calendar';

#{$block} {
    position: relative;

    display: inline-block;

    width: 24px;
    height: 24px;

    &_size_xs {
        width: 20px;
        height: 20px;
    }

    &_size_m {
        width: 28px;
        height: 28px;
    }

    &_size_l {
        width: 36px;
        height: 36px;
    }

    &__button {
        position: absolute;
        inset: 0;

        display: flex;
        justify-content: center;
        align-items: center;
    }

    &__input {
        position: absolute;
        z-index: 1;
        inset-block-start: 0;
        inset-inline-start: 0;

        box-sizing: border-box;
        width: 100%;
        height: 100%;
        margin: 0;
        padding: 0;

        cursor: pointer;

        opacity: 0;
        border: none;

        &::-webkit-calendar-picker-indicator {
            position: absolute;
            inset-block-start: 0;
            inset-inline-start: 0;

            width: 100%;
            height: 100%;
            margin: 0;
            padding: 0;

            cursor: pointer;
        }
    }
}

